Se agrega el proyecto

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,48 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Carrito {
+  align-items: center;
+  border: 1px solid black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Carrito p {
+  font-size: 20pt;
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Item {
+  border: 1px solid black;
+  width: 300px;
+}
+
+.carrito-contenedor {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+}
+
+.Stock{
+  width: 50% vp;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.Stock .producto{
+  margin: 2rem;
+}
+.Stock img {
+  width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  background-color: black;
+  color: whitesmoke;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-bottom: 2rem;
+  font-size: 12pt;
 }
