--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 .App {
   text-align: center;
+}
+
+.bandeja{
   width: 100%;
+  margin: 2rem 0;
 }
 
 .Carrito {
   align-items: center;
-  border: 1px solid black;
 }
 
 .Carrito p {
@@ -38,6 +41,7 @@
 
 .carrito-header {
   text-align: center;
+  margin: 1rem 0 0;
 }
 
 .carrito-header button {
@@ -61,7 +65,6 @@
 }
 
 .Stock {
-  width: 50% vp;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -137,7 +140,7 @@ footer {
   justify-content: space-around;
   padding: 2rem;
   font-size: 12pt;
-  width: 100%;
+ 
 }
 
 footer a {
@@ -159,3 +162,11 @@ footer a:active {
   background: #000000;
   color: whitesmoke;
 }
+
+.me-auto .barrita{
+  color: white;
+  text-decoration: none;
+  margin: 0 1rem;
+  font-size: 15pt;
+}
+
